# StockEngine

./: README.md  main.py  pyproject.toml
attached_assets/: dashboard.avif
components/: charts.py  stock_data.py  technical_analysis.py
styles/: custom.css
utils/: calculations.py
